# xtream-ai-assignment

./: .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
assets/data/raw/: README.md
assets/sota/: dev_sota_xgb_hp.pkl
scripts/: ml_pipeline.py  run_ml_pipeline.py  train.py  train_models.py
src/diamonds/: __init__.py
src/diamonds/ml_pipeline/: __init__.py  data_extraction.py  data_preprocessing.py  model_selection.py  model_training.py
src/service/ml_pipeline/: data_extraction.py  preprocessing.py  training.py
src/xtream/: __init__.py
src/xtream/ml_pipeline/: __init__.py  model_selection.py  optimization.py  preprocessing.py  training.py
src/xtream_service/api/: __init__.py  const.py  diamond_app.py  ml_api.py  models.py  price_predict.py  price_prediction.py  pydantic_models.py  sample_get.py  sampling.py
src/xtream_service/db/: __init__.py  data_put.py  put.py
src/xtream_service/ml_pipeline/: __init__.py  _const.py  data_extraction.py  data_processing.py  model_selection.py  model_serialization.py  models.py  optimization.py  preprocessing.py  training.py
src/xtream_service/utils/: __init__.py  logger.py  utils.py
tests/: __init__.py
tests/api_tests/: test_price_predict.py  test_sample_get.py
tests/ml_pipeline_tests/: __init__.py  _const.py  const.py  test_data_extraction.py  test_data_preprocessing.py  test_data_processing.py  test_models.py  test_preprocessing.py  test_training.py
