[project]
name = "diamonds"
version = "0.2.0"
description = "Automated pipeline for model training and REST API for serving predictions on diamond data."
authors = [
    {name = "Riccardo Mei"},
]
dependencies = [
    "pandas>=2.2.2",
    "requests>=2.32.3",
]
requires-python = ">=3.12"
readme = "README.md"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
