# Project #
[project]
name = "diamonds"
version = "0.2.1"
description = "Automated ML pipeline and REST API for model serving."
authors = [
    {name = "Riccardo Mei"}, {email = "-"}
]
dependencies = [
    "requests>=2.32.3",
    "pandas>=2.2.2",
    "polars>=1.2.1",
    "pytest>=8.3.1",
    "black>=24.4.2",
]
requires-python = ">=3.12"
readme = "README.md"

# Tools #
[tool.pdm.build]
excludes = ["**/.DS_Store"]
package-dir = "src"
source-includes = ["tests", "CHANGELOG.md", "README.md"]

[tool.pdm.version]
source = "file"
path = "src/diamonds/__init__.py"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
	"tests",
]

# Build #
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
